# finmem

./: .gitignore  env_data_pkl.pkl  export_results.py  generate_configs.py  generate_env_data_pkl.py  generate_price_data.py  monitor_status.sh  pyproject.toml  run.py  run_datapipeline.slurm  run_openrouter.sh  run_sim_array.slurm  test.ipynb
config/: tsla_openrouter_config.toml
config/generated_configs/: 0700_HK_config.toml  1288_HK_config.toml  1398_HK_config.toml  9988_HK_config.toml  AAPL_config.toml  ABBV_config.toml  AMZN_config.toml  AVGO_config.toml  AZN_L_config.toml  BAC_config.toml  BRK-B_config.toml  COST_config.toml  D05_SI_config.toml  HD_config.toml  HSBA_L_config.toml  JNJ_config.toml  JPM_config.toml  KO_config.toml  LLY_config.toml  MCD_config.toml  MSFT_config.toml  NVDA_config.toml  O39_SI_config.toml  PG_config.toml  RR_L_config.toml  SHEL_L_config.toml  TSLA_config.toml  U11_SI_config.toml  UNH_config.toml  V_config.toml  WMT_config.toml  (+1 more)
data-pipeline/: 01_Free_SEC_download.py  01_SEC_API_10k10q_download.py  02_Google_news.py
puppy/: agent.py  chat.py  environment.py  reflection.py
runs/: sim_389572_7.err  sim_389613_14.err  sim_389613_14.out  sim_389613_7.out  sim_389630_12.err  sim_389630_9.out  sim_389648_15.out  sim_389648_8.err  sim_389706_16.err  sim_389735_11.out  sim_389735_12.out  sim_389735_16.err  sim_389735_2.out  sim_389735_5.out  sim_389759_2.err  sim_389782_1.err  sim_389782_10.err  sim_389782_11.err  sim_389782_12.err  sim_389782_13.err  sim_389782_14.err  sim_389782_15.err  sim_389782_16.err  sim_389782_2.err  sim_389782_3.err  sim_389782_4.err  sim_389782_5.err  sim_389782_6.err  sim_389782_7.err  sim_389782_8.err  sim_389782_9.err  sim_389804_1.err  sim_389804_10.err  sim_389804_11.err  sim_389804_12.err  sim_389804_13.err  sim_389804_14.err  sim_389804_15.err  sim_389804_16.err  sim_389804_2.err  (+95 more)
(+777 files in other folders)
