[project]
name = "finmem"
version = "0.0.0"
description = ""
authors = [
    { name = "Haohang Li", email = "hli113@stevens.edu" }
]
requires-python = ">=3.11,<3.12"

dependencies = [
    "annotated-types>=0.6.0",
    "faiss-cpu>=1.7.4",
    "guardrails-ai<0.3.0",
    "httpx>=0.26.0",
    "langchain-community>=0.0.15",
    "numpy>=1.26.3",
    "polars>=0.20.5",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "sortedcontainers>=2.4.0",
    "toml>=0.10.2",
    "torch>=2.2.0",
    "tqdm>=4.66.1",
    "transformers>=4.37.2",
    "typer>=0.9.0",
]
